FIx overflow hidden

--- a/sass/general.scss
+++ b/sass/general.scss
@@ -7,11 +7,12 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: $clr-mid-blue;
   color: $clr-main;
-  overflow-y: hidden;
+  //overflow-x: hidden;
+  overflow-y: scroll;
   font-family: $font-medium;
 }
 
