--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,6 +2,7 @@ header {
   width: 100%;
   padding: 0 1rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   //height: 5rem;
